# NikoF

./: .gitignore  README.md
.squad/: .first-run  config.json  decisions.md  routing.md  team.md
.squad/casting/: history.json  registry.json
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-05-14T09-40-00-live-delivery-batch.md  2026-05-14T09-53-00-frontend-live-consumption-batch.md  2026-05-14T10-08-00-frontend-shell-split-surface-batch.md  2026-05-14T10-23-00-frontend-entrypoint-split-landed-batch.md  2026-05-14T10-56-00-operator-command-batch.md  2026-05-14T12-18-00-memory-retrieval-batch.md  (+2 more)
.squad/skills/: README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/core/: __init__.py  settings.py
backend/app/schemas/: __init__.py  animation.py  character.py  health.py  session.py
backend/app/services/: __init__.py  animation.py  animation_broadcast.py  character.py  llm.py  memory.py  session.py  speech.py
backend/nikof_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: __init__.py  test_animation_broadcast.py  test_animation_service.py  test_event_store.py  test_operator_command_surface.py
docs/: ANIMATION_DSL_SCHEMA.md  ANIMATION_DSL_WORKFLOW.md  ANIMATION_VIEWER_STRATEGY.md  ARCHITECTURE.md  BACKEND_ANIMATION_CONTRACT.md  EXTERNAL_REVIEW_2026-05-15.md  IMPLEMENTATION_PLAN.md  NEXT_STEPS.md  PROGRESS_REPORT.md  SETUP_AND_CONTINUITY.md  WORKSTREAMS.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+116 files in other folders)
