[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nikof-backend"
version = "0.1.0"
description = "Backend scaffold for the NikoF local companion stack."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["app*"]
